--- a/nick/app.css
+++ b/nick/app.css
@@ -452,6 +452,162 @@
   position: relative;
 }
 
+.calendar {
+  margin-bottom: 2rem;
+}
+
+.calendar .days > .empty.first-row {
+  border-bottom: 1px solid #c2cbd3;
+}
+
+.calendar .days > .day.end-row {
+  border-right-width: 1px;
+}
+
+.calendar .days > .day.in-past {
+  background-color: var(--pale-grey);
+}
+
+.calendar .days > .day > div:nth-child(2) {
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.calendar .days > .day::after {
+  z-index: 1;
+  content: "";
+  position: absolute;
+  border: 3px solid transparent;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+}
+
+.calendar .days > .day.active::after {
+  cursor: pointer;
+}
+
+.calendar .days > .day.active.unselected:hover::after {
+  border: 3px solid black;
+}
+
+.calendar .days > .day.start::after {
+  border-width: 3px 0 3px 3px;
+  border-color: black;
+}
+
+.calendar .days > .day.mid::after {
+  border-width: 3px 0 3px 0;
+  border-color: black;
+}
+
+.calendar .days > .day.end::after {
+  border-width: 3px 3px 3px 0;
+  border-color: black;
+}
+
+.calendar .days > .day.single::after {
+  border-width: 3px;
+  border-color: black;
+}
+
+.calendar .days > .day {
+  height: 6vw;
+  min-height: 3.5rem;
+  color: #455d75;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 0.25rem 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  min-width: 0;
+  border-style: solid;
+  border-color: #c2cbd3;
+  border-width: 0 0 1px 1px;
+  position: relative;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.calendar .days.inactive > div:hover.start::after,
+.calendar .days.inactive > div:hover.end::after,
+.calendar .days.inactive > div:hover.mid::after {
+  border-color: blue;
+  border-width: 3px;
+  z-index: 3;
+}
+
+.calendar .days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.calendar .day-header > div {
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.calendar .day-header {
+  display: flex;
+  border-width: 1px 0;
+  border-style: solid;
+  border-color: #c2cbd3;
+  justify-content: space-between;
+  text-align: center;
+  font-size: 14px;
+  font-weight: normal;
+  color: var(--bluey-grey);
+  margin-top: 1rem;
+  line-height: 2rem;
+}
+
+.calendar .month-chooser .btn::before {
+  content: "";
+  width: 0.75rem;
+  height: 0.75rem;
+  border-width: 0 0 1px 1px;
+  border-color: #979797;
+  border-style: solid;
+  display: inline-block;
+  -ms-transform: rotate(45deg) translate(3px, -1px);
+  -moz-transform: rotate(45deg) translate(3px, -1px);
+  -webkit-transform: rotate(45deg) translate(3px, -1px);
+  transform: rotate(45deg) translate(3px, -1px);
+}
+
+.calendar .month-chooser .btn.next::before {
+  -ms-transform: rotate(225deg) translate(1px, -2px);
+  -moz-transform: rotate(225deg) translate(1px, -2px);
+  -webkit-transform: rotate(225deg) translate(1px, -2px);
+  transform: rotate(225deg) translate(1px, -2px);
+}
+
+.calendar .month-chooser .btn:hover::before {
+  border-color: var(--white);
+}
+
+.calendar .month-chooser .btn {
+  border-color: #c2cbd3;
+}
+
+.calendar .month-chooser {
+  display: flex;
+  justify-content: space-between;
+  font-family: Poppins;
+  font-size: 24px;
+  font-weight: 300;
+}
+
 .coin-price {
   display: inline-block;
   padding-left: 1.625rem;
@@ -2715,6 +2871,10 @@ footer .copyright {
   margin-top: 2.5rem;
   display: flex;
   justify-content: space-between;
+}
+
+.create-listing .create-listing-calendar {
+  border: transparent;
 }
 
 .create-listing-step-1 {
