--- a/natasha/css/app.css
+++ b/natasha/css/app.css
@@ -509,8 +509,6 @@
   align-items: center;
   color: white;
   padding: 3rem;
-  display: flex;
-  justify-content: center;
 }
 
 .pl-modal .pl-modal-table .pl-modal-cell {
@@ -518,7 +516,7 @@
   height: 100%;
   width: 100%;
   vertical-align: middle;
-  padding: 1rem;
+  padding: 3rem;
 }
 
 .pl-modal .pl-modal-table {
@@ -712,6 +710,14 @@
   font-weight: normal;
 }
 
+.pl-modal-content .actions .btn:not(:first-child) {
+  margin-left: 0.5rem;
+}
+
+.pl-modal-content .actions {
+  margin-top: 2rem;
+}
+
 .offer-details {
   background: var(--pale-grey-eight);
   border-radius: 5px;
@@ -812,6 +818,59 @@
   font-size: 18px;
 }
 
+.fulfillment-modal {
+  max-width: 580px;
+}
+
+.fulfillment-modal .content h2 {
+  text-align: center;
+}
+
+.fulfillment-modal .content .step {
+  background: var(--dark);
+  color: var(--white);
+  min-width: 1.6rem;
+  padding: 0.2rem 0.5rem;
+  height: 1.6rem;
+  border-radius: 2rem;
+  line-height: 1.6rem;
+  text-align: center;
+  margin-right: 0.5rem;
+}
+
+.fulfillment-modal .content .checklist > div {
+  margin-bottom: 1rem;
+}
+
+.fulfillment-modal .content .checklist span.text {
+  display: table-cell;
+  padding-left: 0.5rem;
+}
+
+.fulfillment-modal .content .checklist {
+  padding-bottom: 2rem;
+}
+
+.fulfillment-modal .content {
+  height: 100%;
+  text-align: left;
+}
+
+.fulfillment-modal .table-cell {
+  display: table-cell;
+}
+
+.fulfillment-modal .btn-outline-light {
+  width: 50%;
+  align-self: center;
+}
+
+@media (max-width: 576px) {
+  .fulfillment-modal {
+    padding: 1rem !important;
+  }
+}
+
 .tx-listing-detail {
   border: 1px solid var(--light);
   border-radius: 5px;
@@ -865,6 +924,12 @@
   margin-bottom: 2rem;
   width: 50%;
   text-align: center;
+}
+
+.transaction-progress .btn.withdraw {
+  font-size: 12px;
+  padding-top: 0;
+  font-weight: normal;
 }
 
 .transaction-progress .btn {
@@ -945,50 +1010,6 @@
   color: var(--dark);
   font-weight: normal;
   position: relative;
-}
-
-.pl-modal .pl-modal-table .pl-modal-cell .pl-modal-content {
-  max-width: 580px;
-}
-
-.table-cell {
-  display: table-cell;
-}
-
-.fulfillment-modal .content h2 {
-  text-align: center;
-}
-
-.fulfillment-modal .content .step {
-  background: var(--dark);
-  color: var(--white);
-  min-width: 1.6rem;
-  padding: 0.2rem 0.5rem;
-  height: 1.6rem;
-  border-radius: 2rem;
-  line-height: 1.6rem;
-  text-align: center;
-  margin-right: 10px;
-}
-
-.fulfillment-modal .content .checklist span.text {
-  display: table-cell;
-  padding-left: 10px;
-}
-
-.fulfillment-modal .content .checklist {
-  padding-bottom: 40px;
-}
-
-.fulfillment-modal .content {
-  height: 100%;
-  text-align: left;
-  line-height: 2.5;
-}
-
-.btn-outline-light {
-  width: 50%;
-  align-self: center;
 }
 
 .tx-history {
@@ -3331,7 +3352,6 @@ footer .copyright {
 .listing-detail .listing-buy .price {
   background: url(images/eth-icon.svg) no-repeat;
   background-size: 1.5rem;
-  border-bottom: 1px solid var(--light);
   padding: 0.2rem 0 1.5rem 2rem;
   line-height: 1rem;
   font-family: Lato;
@@ -3339,6 +3359,24 @@ footer .copyright {
   font-weight: bold;
   font-style: normal;
   color: #000000;
+}
+
+.listing-detail .listing-buy.multi .price {
+  border-bottom: 1px solid var(--light);
+}
+
+.listing-detail .listing-buy.pending > div:nth-child(2) {
+  font-size: 24px;
+  margin: 1rem 0;
+}
+
+.listing-detail .listing-buy.pending > div:nth-child(3) {
+  margin-bottom: 1rem;
+}
+
+.listing-detail .listing-buy.pending {
+  text-align: center;
+  font-weight: normal;
 }
 
 .listing-detail .listing-buy {
@@ -3392,6 +3430,68 @@ footer .copyright {
   margin-right: 1rem;
 }
 
+.send-message textarea {
+  background-color: transparent;
+  border: 0;
+  padding: 10px 0 0;
+  resize: none;
+  outline: none;
+  -ms-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+
+.send-message button {
+  margin: auto 0;
+  width: auto;
+}
+
+.send-message img.add-photo {
+  padding: 0 10px;
+}
+
+.send-message .images-preview .images-container .img {
+  width: 185px;
+}
+
+.send-message .images-preview .images-container .image-overlay-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  padding: 0.75rem;
+  line-height: 0.5;
+  background-color: white;
+  font-weight: bold;
+  border-bottom: 1px solid var(--light);
+  opacity: 0.5;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  filter: alpha(opacity=50);
+}
+
+.send-message .images-preview .images-container {
+  display: inline-block;
+  height: 100%;
+  position: relative;
+  max-height: 245px;
+}
+
+.send-message .images-preview .img {
+  background-position: center;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.send-message .images-preview {
+  padding: 10px 0;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
 .messages-page .messages {
   max-height: calc(100vh - 10.25rem);
   overflow: auto;
@@ -3403,11 +3503,23 @@ footer .copyright {
   flex-direction: column;
 }
 
+.messages-page .messages .image-container img {
+  max-height: 250px;
+  max-width: 165px;
+}
+
 .messages-page .messages .timestamp {
   color: var(--bluey-grey);
   font-size: 12px;
   align-self: center;
   margin-bottom: 1rem;
+}
+
+.messages-page .messages .message .avatar {
+  height: 60px;
+  width: 60px;
+  display: inline-block;
+  vertical-align: bottom;
 }
 
 .messages-page .messages .message .bubble .top .name {
@@ -3457,14 +3569,20 @@ footer .copyright {
 }
 
 .messages-page .messages .message .bubble {
+  display: inline-block;
   margin-left: 1.5rem;
   padding: 1rem;
   background-color: var(--pale-grey);
   border-radius: 1rem;
   position: relative;
+  max-width: 70%;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
 }
 
-.messages-page .messages .message.them .bubble::after {
+.messages-page .messages .message.user .bubble::after {
   right: -34px;
   left: auto;
   box-shadow: -10px 11px 0px -3px var(--clear-blue);
@@ -3474,14 +3592,14 @@ footer .copyright {
   transform: rotate(42deg);
 }
 
-.messages-page .messages .message.them .bubble {
+.messages-page .messages .message.user .bubble {
   background-color: var(--clear-blue);
   color: var(--white);
   margin-right: 1.5rem;
   margin-left: 0;
 }
 
-.messages-page .messages .message.them {
+.messages-page .messages .message.user {
   align-self: flex-end;
   -ms-flex-direction: row-reverse;
   -moz-flex-direction: row-reverse;
@@ -3490,9 +3608,7 @@ footer .copyright {
 }
 
 .messages-page .messages .message {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 1rem;
+  margin: 20px 0;
 }
 
 .messages-page {
