--- a/nick/app.css
+++ b/nick/app.css
@@ -67,29 +67,29 @@
   animation-timing-function: linear;
 }
 
-.badge {
-  background: gray;
-  color: white;
-}
-
 .badge-sold {
   background: var(--dark);
+  color: white;
 }
 
 .badge-unavailable {
   background: var(--dark);
+  color: white;
 }
 
 .badge-soldout {
   background: var(--dark);
+  color: white;
 }
 
 .badge-pending {
   background: var(--dark);
+  color: white;
 }
 
 .badge-featured {
   background: var(--gold);
+  color: white;
 }
 
 .avatar {
@@ -932,6 +932,17 @@
   position: relative;
 }
 
+.progress-tooltip .tooltip-inner {
+  background: var(--dark-grey-blue);
+  max-width: 250px;
+  font-size: 0.75rem;
+  padding: 0.5rem;
+}
+
+.progress-tooltip .arrow::before {
+  border-top-color: var(--dark-grey-blue);
+}
+
 .tx-listing-detail {
   border: 1px solid var(--light);
   border-radius: 5px;
@@ -1337,6 +1348,49 @@ footer .copyright {
   }
 }
 
+.beta-modal {
+  background: url(images/beta.svg) no-repeat top center;
+  background-size: 11rem;
+  padding-top: 10rem;
+  font-size: 16px;
+}
+
+.beta-modal h5 {
+  font-size: 18px;
+}
+
+.beta-modal ul li {
+  background: url(images/warning-icon.svg) no-repeat 0px 1px;
+  padding-left: 2rem;
+  background-size: 1.25rem;
+  line-height: 1.25rem;
+  padding-bottom: 0.75rem;
+}
+
+.beta-modal ul {
+  text-align: left;
+  margin: 1rem 0 0 0;
+}
+
+.beta-modal .actions label input {
+  margin-right: 0.25rem;
+}
+
+.beta-modal .actions label {
+  margin-top: 0.5rem;
+  color: var(--white);
+  font-size: 12px;
+}
+
+.beta-modal .actions {
+  display: flex;
+  align-items: center;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .attestation-modal {
   overflow: visible !important;
   padding-bottom: 1.5rem !important;
@@ -1633,6 +1687,47 @@ footer .copyright {
   font-weight: 200;
   color: var(--dark);
   margin-top: 3rem;
+}
+
+.beta-banner {
+  background: #fff8de;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.beta-banner .container > div:nth-child(1) {
+  margin-right: 1rem;
+}
+
+.beta-banner .container > div:nth-child(2) > div:nth-child(1) {
+  font-weight: 700;
+}
+
+.beta-banner .container > div:nth-child(2) {
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.beta-banner .container > div:nth-child(3) a:hover {
+  background: gray;
+  color: white;
+}
+
+.beta-banner .container > div:nth-child(3) a {
+  display: inline-block;
+  width: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  border-radius: 1rem;
+  font-weight: 700;
+  color: var(--dark);
+}
+
+.beta-banner .container {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .profile-edit {
@@ -3928,6 +4023,17 @@ footer .copyright {
 .notifications-list {
   border: 1px solid var(--light);
   border-radius: 5px;
+}
+
+.app-error {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 @-ms-keyframes spin {
