--- a/nick/app.css
+++ b/nick/app.css
@@ -2056,6 +2056,10 @@ footer .copyright {
   margin-bottom: 1.5rem;
 }
 
+.lead-text {
+  padding: 30px 0 5px 0;
+}
+
 .onboard .onboard-box .no-funds::before {
   content: "";
   background-color: var(--steel);
@@ -2861,65 +2865,6 @@ footer .copyright {
   justify-content: space-between;
 }
 
-.create-listing .create-listing-review .fiat {
-  display: inline-block;
-  margin-left: 0.75rem;
-  font-size: 14px;
-}
-
-.create-listing .create-listing-review h2 {
-  font-size: 28px;
-}
-
-.create-listing .create-listing-review .detail .row .label {
-  color: var(--dusk);
-}
-
-.create-listing .create-listing-review .detail .row {
-  margin-bottom: 1rem;
-}
-
-.create-listing .create-listing-review .detail {
-  border: 1px solid var(--light);
-  border-radius: 5px;
-  padding: 1rem 2rem;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.create-listing .create-listing-review .photos .photo-row {
-  font-size: 12px;
-  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
-  background: #fff;
-  padding: 5px;
-  background-position: center;
-  width: 100%;
-  height: 80px;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.create-listing .create-listing-review .photos {
-  margin-bottom: 1rem;
-  display: grid;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  grid-template-columns: repeat(auto-fill,minmax(90px, 1fr));
-}
-
-.create-listing .create-listing-review .actions .btn {
-  min-width: 10rem;
-  border-radius: 2rem;
-  padding: 0.625rem;
-  font-size: 18px;
-}
-
-.create-listing .create-listing-review .actions {
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: space-between;
-}
-
 .create-listing .create-listing-step-3 {
   max-width: 460px;
 }
@@ -3115,6 +3060,65 @@ footer .copyright {
 }
 
 .create-listing .create-listing-step-3 .actions {
+  margin-top: 2.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.create-listing .create-listing-review .fiat {
+  display: inline-block;
+  margin-left: 0.75rem;
+  font-size: 14px;
+}
+
+.create-listing .create-listing-review h2 {
+  font-size: 28px;
+}
+
+.create-listing .create-listing-review .detail .row .label {
+  color: var(--dusk);
+}
+
+.create-listing .create-listing-review .detail .row {
+  margin-bottom: 1rem;
+}
+
+.create-listing .create-listing-review .detail {
+  border: 1px solid var(--light);
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.create-listing .create-listing-review .photos .photo-row {
+  font-size: 12px;
+  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 1px 1px rgba(16, 22, 26, 0.2);
+  background: #fff;
+  padding: 5px;
+  background-position: center;
+  width: 100%;
+  height: 80px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.create-listing .create-listing-review .photos {
+  margin-bottom: 1rem;
+  display: grid;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  grid-template-columns: repeat(auto-fill,minmax(90px, 1fr));
+}
+
+.create-listing .create-listing-review .actions .btn {
+  min-width: 10rem;
+  border-radius: 2rem;
+  padding: 0.625rem;
+  font-size: 18px;
+}
+
+.create-listing .create-listing-review .actions {
   margin-top: 2.5rem;
   display: flex;
   justify-content: space-between;
@@ -3496,6 +3500,7 @@ footer .copyright {
   color: #000;
   font-weight: bold;
   border-radius: 5px 0 0 0;
+  white-space: nowrap;
 }
 
 .navbar .nav-item .dropdown-menu.confirmations .confirmation:last-child {
@@ -3859,6 +3864,45 @@ footer .copyright {
 
 .listing-detail .listing-buy.multi .price {
   border-bottom: 1px solid var(--light);
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(1):hover,
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(3):hover {
+  background: var(--pale-grey-seven);
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(1),
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(3) {
+  border-radius: 5px;
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(1) {
+  margin-left: -5px;
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(3) {
+  margin-right: -5px;
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(2) {
+  background: url(images/arrow-right.svg) no-repeat center;
+  background-size: 1.25rem;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.listing-detail .listing-buy.fractional .choose-dates div:nth-child(3) {
+  text-align: right;
+}
+
+.listing-detail .listing-buy.fractional .choose-dates {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .listing-detail .listing-buy.pending > div:nth-child(2) {
